# detection_on_synth_data

./: .gitignore  .project-root  EXPERIMENT_LOG.md  Makefile  README.md  mmdet_install.sh  pyproject.toml  setup.cfg
blender_project/: README.md  stop_sign.blend  stop_sign.blend1
configs/: train.yaml
model/: config.py
src/: annotations.py  config.py  datamodule.py  lightning_module.py  train.py  transforms.py
src/callbacks/: debug.py  experiment_tracking.py
src/common/: annotations.py  transform.py  utils.py
src/mm_detection/: builder.py  constants.py  data_preprocessor.py  dataloaders.py  hooks.py  inference.py  train.py  transforms.py
src/mm_detection/config/: model.py  trainer.py
