[tool.poetry]
name = "sigh_detection"
version = "0.1.0"
description = ""
authors = ["Egor Osinkin <egor.os.ink@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
torch = {version = "2.0.0"}
torchvision = {version = "0.15.1"}
opencv-python-headless = "^4.7.0.72"
clearml = "^1.10.4"
pandas = "^2.0.1"
torchmetrics = ">=1.1.1"
albumentations = "^1.3.0"
pyrootutils = "^1.0.4"
omegaconf = "^2.3.0"
pydantic = "^1.10.8"
tensorboard = "^2.13.0"
openmim = "^0.3.7"
torchinfo = ">=1.8.0"
frozendict = ">=2.3.8"
yapf = "<=0.40.1"
gdown = "^4.7.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"
wemake-python-styleguide = "^0.17.0"
vulture = "^2.7"
pytest = "^7.3.1"

[tool.poetry.group.serving]
optional = false

[tool.poetry.group.serving.dependencies]
torchserve = "^0.8.0"
torch-model-archiver = "^0.8.0"
nvgpu = "^0.10.0"

[tool.vulture]
min_confidence = 80
paths = ["src",]
ignore_names = ["albu*", "batch_idx", "args", "kwargs",]
sort_by_size = true
verbose = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
